# hifi

avatar-mixer/src/: main.cpp
cmake/macros/: SetupHifiLibrary.cmake  SetupHifiProject.cmake
cmake/modules/: FindLibVPX.cmake  FindPortAudio.cmake  FindSTK.cmake
interface/: CMakeLists.txt
interface/src/: Application.cpp  Application.h  Audio.cpp  BandwidthMeter.h  LeapManager.cpp  PairingHandler.cpp  Transmitter.h  Util.cpp  Util.h  Webcam.cpp
interface/src/avatar/: Avatar.cpp
interface/src/ui/: BandwidthDialog.cpp  VoxelStatsDialog.cpp
libraries/audio/: CMakeLists.txt
libraries/audio/src/: AudioInjectionManager.cpp  AudioInjector.cpp
libraries/avatars/src/: AvatarData.h
libraries/shared/src/: Logstash.cpp  Logstash.h  Node.h  NodeList.cpp  NodeList.h  PerfStat.cpp  PerfStat.h  SharedUtil.h  Syssocket.h  Systime.h  UDPSocket.cpp  UrlReader.cpp
libraries/voxels/: CMakeLists.txt
libraries/voxels/src/: Tags.cpp
